syntax = "proto3";

// Language Dependent Statements Start, below statements are applicable only for Java
option java_package = "ericsson.core.nrf.dbproxy.grpc.nfmessage.groupprofile";
option java_outer_classname = "GroupProfileIndexProto";
option go_package = "com/dbproxy/nfmessage/groupprofile";
package grpc;
// Language Dependent Statements End

message GroupProfileIndex {
    repeated string nf_type      = 1;
    repeated string group_index  = 2;
	uint32 profile_type          = 3;
}
